# simple_calculator

./: Dockerfile  LICENSE  README.md  setup.cfg  setup.py
src/: calculator.py
tests/: calculator_test.py
