[metadata]
name = calculator-u-aaa
version = 0.0.1
author = Blessing Ehizojie-Philips
author_email = blessingphilips@ymail.com
description = A small calculator package
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls = https://github.com/u-aaa/simple_calculator
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src